--- a/maintanance final/maintanance final.csproj
+++ b/maintanance final/maintanance final.csproj
@@ -48,6 +48,7 @@
     <Compile Include="domain\TeamManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="service\ITeamManagerService.cs" />
     <Compile Include="service\Service.cs" />
   </ItemGroup>
   <ItemGroup>
